BONUS add classes to html list

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <ul id="lista"></ul>
+    <div id="lista"></div>
 
     <script src="./assets/js/main.js"></script>
 </body>
