--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     
     <div class="container">
-        <h1 class="text-center text-light">
+        <h1 class="text-center text-light py-4">
             FizzBuzzDOM
         </h1>
-        <div class="row row-cols-7" id="lista"></div>
+        <div class="row row-cols-6" id="lista"></div>
     </div>
     
 
